# cam_enabled_steering_llm

./: .gitignore  README.md  llama33_70b_h100_genericize.patch  pyproject.toml
gemma2_steering/: __init__.py  lm_eval.py  model.py  steerers.py
notebooks/: 70B_test_oom_safe.ipynb  gemma2_benchmarks.ipynb  piano_experiment.ipynb
tests/: test_steering.py
