[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gemma2-steering-research"
version = "0.1.0"
description = "Minimal residual-stream steering utilities for Gemma 2 interpretability research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.44",
    "accelerate>=0.33",
]

[project.optional-dependencies]
eval = ["lm-eval[hf]>=0.4.0", "datasets>=2.20", "huggingface-hub>=0.24"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["gemma2_steering*"]
